<resources>
    <string name="app_name">DropOfLife</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="call_me">Call me</string>
    <string name="chat">Chat</string>

    <string name="Login">Login</string>
    <string name="wel_msg2">Welcome to a drop of life, here you can donate blood to patients in need</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="first">First name</string>
    <string name="last">Last name</string>
    <string name="bdate">Birth Date </string>
    <string name="gender">Gender</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dont_have">Don\'t have an account? </string>
    <string name="signup_txt">Sign Up</string>
    <string name="error_email">Wrong Pattern,Check your email plz</string>
    <string name="error_pass">Password must be more than 8 letters</string>
    <string name="or_sign_in_using">Or Sign In Using</string>
</resources>